# Agentic-AI-Application

./: .READMEGUEY.md.swp  .app.py.swp  .env  .gitignore  README.md  READMEGUEY.md  app.py  main.py  pyproject.toml
scripts/: .visualize_swarm.py.swp  ddl.sql  gen_graph.py  queries.sql  seed_db.py  seed_revenue.py  test_swarm.py  visualize_swarm.py
services/: mcp_host.py
services/agent_orchestrator/: .graph.py.swp  .state.py.swp  graph.py  router.py  state.py
services/agent_orchestrator/agents/: .critic.py.swp  .memory_agent.py.swp  analysis_agent.py  critic.py  diagnostic_agent.py  memory_agent.py  planner.py  router.py  schema_agent.py  sql_specialist.py  web_research_agent.py
services/memory_service/: .vector_search.py.swp  vector_search copy.py  vector_search.py
tests/: sanity_check_memory.py  test_mcp.py  test_swarm.py
